--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -9,42 +9,12 @@
     android:orientation="vertical"
     android:background="@color/white_gray">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/setting_toolbar"
+    <include
+        android:id="@+id/tool_bar_pf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@color/white"
-            >
-
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/back_to_home"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_back"
-                android:background="?attr/selectableItemBackground"
-                android:scaleType="centerCrop"
-                />
-
-            <TextView
-                android:id="@id/user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/settings_and_activity"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:layout_centerHorizontal="true"
-                />
-
-        </RelativeLayout>
-
-    </androidx.appcompat.widget.Toolbar>
+        layout="@layout/common_toolbar"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
