--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,8 @@
     </style>
 
     <style name="Theme.SocialMediaApp" parent="Base.Theme.SocialMediaApp" />
+
+    <style name="toolbar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
