--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -191,7 +191,7 @@
         android:layout_marginTop="20dp">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/edit_profile_btn"
+            android:id="@+id/follow_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/follow"
