--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -230,22 +230,11 @@
 
     </LinearLayout>
 
-    <include
-        android:id="@+id/pf_navigation_bar_layout"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/profile_navigation_bar"
-        android:layout_marginTop="20dp"
-        />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/pf_fragment_container"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        android:layout_marginTop="10dp"
-        app:navGraph="@navigation/pf_nav" />
+        android:layout_marginTop="10dp"/>
 
 
 
