--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -108,6 +108,7 @@
                 android:src="@drawable/ic_comment"/>
 
             <TextView
+                android:id="@+id/comment_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/comment_number"
