upload Image to storage

--- a/app/src/main/res/layout/bottom_toolbar.xml
+++ b/app/src/main/res/layout/bottom_toolbar.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     style="@style/toolbar"
+    android:id="@+id/toolbar"
     app:menu="@menu/post_bottom_bar">
 
 </androidx.appcompat.widget.Toolbar>
