--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -17,18 +17,40 @@
             android:layout_height="50dp"
             android:src="@drawable/reona_pfp"/>
 
-        <TextView
-            android:id="@+id/user_name"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:text="@string/reo_peko"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_gravity="center_vertical"
-            />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="@string/reo_peko"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="10dp"
+                />
+
+            <TextView
+                android:id="@+id/timestamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1d"
+                android:textSize="14sp"
+                android:textStyle="normal"
+                android:textColor="@color/gray"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="center_vertical"
+                />
+
+
+
+        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/more_horz"
@@ -133,16 +155,6 @@
             android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/ic_share"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/share_number"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:textSize="17sp"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/black"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
