--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -21,6 +21,9 @@
         <action
             android:id="@+id/action_searchFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_commentListBottomSheetDialog"
+            app:destination="@id/commentListBottomSheetDialog" />
     </fragment>
     <fragment
         android:id="@+id/addFragment"
@@ -39,6 +42,9 @@
             android:name="isCurrentUser"
             app:argType="boolean"
             android:defaultValue="false" />
+        <action
+            android:id="@+id/action_profileFragment_to_commentListBottomSheetDialog"
+            app:destination="@id/commentListBottomSheetDialog" />
     </fragment>
     <fragment
         android:id="@+id/notificationFragment"
@@ -64,25 +70,26 @@
         android:id="@+id/postFragment"
         android:name="com.example.socialmediaapp.ui.fragment.profile.PostFragment"
         android:label="fragment_post"
-        tools:layout="@layout/fragment_post" >
-        <action
-            android:id="@+id/action_postFragment_to_commentListBottomSheetDialog"
-            app:destination="@id/commentListBottomSheetDialog" />
-    </fragment>
+        tools:layout="@layout/fragment_post" />
+
+
     <dialog
         android:id="@+id/commentListBottomSheetDialog"
         android:name="com.example.socialmediaapp.ui.fragment.comment.placeholder.CommentListBottomSheetDialog"
         android:label="fragment_comment_list_bottom_sheet_dialog"
         tools:layout="@layout/fragment_comment_list_bottom_sheet_dialog" >
         <action
-            android:id="@+id/action_commentListBottomSheetDialog_to_postFragment"
-            app:destination="@id/postFragment" />
-        <action
             android:id="@+id/action_commentListBottomSheetDialog_to_userProfileFragment"
             app:destination="@id/userProfileFragment" />
         <argument
             android:name="post_with_user"
             app:argType="com.example.socialmediaapp.data.entity.PostWithUser" />
+        <action
+            android:id="@+id/action_commentListBottomSheetDialog_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_commentListBottomSheetDialog_to_searchFragment"
+            app:destination="@id/searchFragment" />
     </dialog>
 
 </navigation>
