--- a/app/src/main/res/layout/fragment_comment_list_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_comment_list_bottom_sheet_dialog.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_bottom_sheet"
+    android:orientation="vertical"
     tools:context=".ui.fragment.comment.placeholder.CommentListBottomSheetDialog">
-
-    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
-        android:id="@+id/bottomSheetDragHandleView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        />
 
     <TextView
         android:id="@+id/title"
@@ -19,24 +13,23 @@
         android:layout_height="wrap_content"
         android:text="@string/comment"
         android:textSize="20sp"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"
-        android:layout_below="@+id/bottomSheetDragHandleView"
+        android:layout_gravity="center_horizontal"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
         android:id="@+id/comment_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         android:layout_margin="15dp"
         android:orientation="horizontal">
 
@@ -76,4 +69,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
