--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="dark_orange">#FF5722</color>
     <color name="red">#FF0000</color>
     <color name="gray">#808080</color>
-    <color name="white_gray">#BCBCBC</color>
+    <color name="white_gray">#D5D5D5</color>
 </resources>
