--- a/app/src/main/res/layout/post_image.xml
+++ b/app/src/main/res/layout/post_image.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:clipToPadding="false">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:clipToPadding="false"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="15dp">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:scaleType="centerCrop"/>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-</RelativeLayout>
+        <!-- Image -->
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"/>
+
+        <!-- Button on top-right -->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/cancel"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="?attr/selectableItemBackground"
+            android:scaleType="centerCrop"
+            android:elevation="4dp"
+            android:layout_gravity="top|end"
+            android:src="@drawable/ic_cancel"
+            android:layout_margin="5dp"/>
+
+    </FrameLayout>
+</androidx.cardview.widget.CardView>
