--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -24,7 +24,11 @@
             app:popExitAnim="@anim/slide_to_right" />
         <action
             android:id="@+id/action_searchFragment_to_profileFragment"
-            app:destination="@id/profileFragment" />
+            app:destination="@id/profileFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_to_left"
+            app:popEnterAnim="@anim/silde_in_left"
+            app:popExitAnim="@anim/slide_to_right" />
         <action
             android:id="@+id/action_searchFragment_to_commentListBottomSheetDialog"
             app:destination="@id/commentListBottomSheetDialog" />
