--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,200 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/white"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    tools:context=".ui.fragment.main.PostFragment">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_pfp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/reona_pfp"/>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/back_btn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_back"
+                android:background="?attr/selectableItemBackground"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_pfp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/reona_pfp"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:text="@string/reo_peko"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:text="@string/reo_peko"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="10dp"
+                    />
+
+                <TextView
+                    android:id="@+id/timestamp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="20dp"
+                    android:text="1d"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"
+                    android:textStyle="normal" />
+
+
+
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/more_horz"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_more_horz"
+                android:background="?attr/selectableItemBackground"
+                android:layout_gravity="center"
                 android:layout_marginEnd="10dp"
                 />
 
-            <TextView
-                android:id="@+id/timestamp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="20dp"
-                android:text="1d"
-                android:textColor="@color/gray"
-                android:textSize="14sp"
-                android:textStyle="normal" />
-
-
-
         </LinearLayout>
 
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/more_horz"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_more_horz"
-            android:background="?attr/selectableItemBackground"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            />
+    <!--    <ImageView-->
+    <!--        android:id="@+id/image"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginTop="10dp"-->
+    <!--        android:src="@drawable/reona_cover"-->
+    <!--        android:adjustViewBounds="true"-->
+    <!--        android:scaleType="centerInside"-->
+    <!--        />-->
 
-    </LinearLayout>
-
-<!--    <ImageView-->
-<!--        android:id="@+id/image"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:src="@drawable/reona_cover"-->
-<!--        android:adjustViewBounds="true"-->
-<!--        android:scaleType="centerInside"-->
-<!--        />-->
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clipToPadding="false"/>
+            android:layout_height="wrap_content">
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"/>
 
-        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
-            android:id="@+id/worm_dot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_gravity="center|bottom"
-            app:dotsSize="10dp"
-            app:dotsColor="@color/orange"
-            app:dotsWidthFactor="3"/>
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/caption"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/caption"
-        android:layout_margin="10dp"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/like_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="?attr/selectableItemBackground"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/ic_heart"/>
+            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
+                android:id="@+id/worm_dot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_gravity="center|bottom"
+                app:dotsSize="10dp"
+                app:dotsColor="@color/orange"
+                app:dotsWidthFactor="3"/>
+        </FrameLayout>
 
         <TextView
-            android:id="@+id/like_count"
-            android:layout_width="wrap_content"
+            android:id="@+id/caption"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/like_number"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:textSize="17sp"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/black"/>
+            android:text="@string/caption"
+            android:layout_margin="10dp"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            />
 
         <LinearLayout
-            android:id="@+id/comment_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="5dp"
-            >
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/comment"
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/like_btn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="?attr/selectableItemBackground"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_comment"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/ic_heart"/>
 
             <TextView
-                android:id="@+id/comment_count"
+                android:id="@+id/like_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/comment_number"
+                android:text="@string/like_number"
                 android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:textSize="17sp"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/black"/>
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/comment_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="5dp"
+                >
+
+                <ImageView
+                    android:id="@+id/comment"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_comment"/>
+
+                <TextView
+                    android:id="@+id/comment_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/comment_number"
+                    android:layout_marginStart="5dp"
+                    android:textSize="17sp"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/black"/>
+
+            </LinearLayout>
 
 
 
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/share"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="?attr/selectableItemBackground"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/ic_share"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/bookmark"
+                android:id="@+id/share"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="?attr/selectableItemBackground"
-                android:scaleType="centerInside"
-                android:layout_margin="10dp"
-                android:src="@drawable/ic_bookmark"
-                android:layout_alignParentEnd="true"
-                />
+                android:scaleType="centerCrop"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/ic_share"/>
 
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/bookmark"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="centerInside"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/ic_bookmark"
+                    android:layout_alignParentEnd="true"
+                    />
+
+            </RelativeLayout>
+
+        </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
